bin/tests/errors_parser/parser/parser_err_misplace_type_qualifier.swg
#global fileprivate

enum A: const #null *s32 { Z } // swc-expected-error {{parser_err_misplace_type_qualifier}}
